<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_admin_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_admin_scan"
        android:icon="@drawable/ic_nav_scan"
        android:title="@string/nav_scan" />
    <item
        android:id="@+id/nav_admin_users"
        android:icon="@drawable/ic_farmers_group"
        android:title="@string/nav_manage_users" />
    <item
        android:id="@+id/nav_admin_reports"
        android:icon="@drawable/ic_report_custom"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_admin_settings"
        android:icon="@drawable/ic_settings_custom"
        android:title="@string/nav_settings" />
</menu>
